Add LLM integration with GPT-4 and .env configuration
- Created evidence/llm_analyzer.py with hybrid constraint+LLM approach
- Added .env.example per hackathon requirements (free-tier API)
- Updated requirements.txt with python-dotenv
- Integrated LLM into run_kdsh.py for improved accuracy
- Updated README with API setup instructions
- Uses gpt-4o-mini (free tier) by default

--- a/project/requirements.txt
+++ b/project/requirements.txt
@@ -1,5 +1,6 @@
 pathway>=0.2.0  # Pathway streaming data framework
-openai  # For LLM extraction if needed
+openai  # For LLM-based consistency analysis
+python-dotenv  # For loading .env files
 pandas  # For results.csv
 pytest  # For testing
 pdfplumber  # For PDF text extraction
