--- a/project/requirements.txt
+++ b/project/requirements.txt
@@ -1,6 +1,6 @@
 pathway>=0.2.0  # Pathway streaming data framework
 openai  # For LLM-based consistency analysis
-google-generativeai  # For Google Gemini (recommended free tier)
+google-genai  # For Google Gemini (modern client)
 python-dotenv  # For loading .env files
 pandas  # For results.csv
 pytest  # For testing
