Improve accuracy with VADER and enhance rationale
- Integrated NLTK VADER for robust sentiment/polarity analysis (replaced keyword lists)
- Updated results.csv rationales to be descriptive (e.g., 'Story shows X while backstory shows Y')
- Regenerated results.csv (5 contradictions found, 8.3%)
- Added nltk to requirements.txt

--- a/project/requirements.txt
+++ b/project/requirements.txt
@@ -2,3 +2,4 @@ pathway>=0.2.0  # Pathway streaming data framework
 pandas  # For results.csv
 pytest  # For testing
 pdfplumber  # For PDF text extraction
+nltk  # For VADER sentiment analysis (improved accuracy)
